tests/tests/snapshots/test__typescript__export-serde.snap
---
source: tests/tests/typescript.rs
assertion_line: 1039
expression: output
---
Range<i32>: export type Range<T> = {
	start: T,
	end: T,
};

RangeInclusive<i32>: export type RangeInclusive<T> = {
	start: T,
	end: T,
};

String: 
PathBuf: 
IpAddr: 
Ipv4Addr: 
Ipv6Addr: 
SocketAddr: 
SocketAddrV4: 
SocketAddrV6: 
Cow<'static, str>: 
Cow<'static, i32>: 
Vec<i32>: 
Vec<MyEnum>: 
Result<String, i32>: export type Result<T, E> = {
	ok: T,
	err: E,
};

Vec<Option<Cow<'static, i32>>>: 
PhantomData<()>: 
PhantomData<String>: 
Infallible: 
Unit1: export type Unit1 = null;

Unit2: export type Unit2 = Record<string, never>;

Unit3: export type Unit3 = [];

Unit4: export type Unit4 = null;

Unit5: export type Unit5 = "A";

Unit6: export type Unit6 = { A: null };

Unit7: export type Unit7 = { A: Record<string, never> };

SimpleStruct: export type SimpleStruct = {
	a: number,
	b: string,
	c: [number, string, number],
	d: string[],
	e: string | null,
};

TupleStruct1: export type TupleStruct1 = number;

TupleStruct3: export type TupleStruct3 = [number, boolean, string];

TestEnum: export type TestEnum = "Unit" | ({ Single: number }) & { Multiple?: never; Struct?: never } | ({ Multiple: [number, number] }) & { Single?: never; Struct?: never } | ({ Struct: {
	a: number,
} }) & { Multiple?: never; Single?: never };

RefStruct: export type RefStruct = TestEnum;

InlinerStruct: export type InlinerStruct = {
	inline_this: {
		ref_struct: SimpleStruct,
		val: number,
	},
	dont_inline_this: RefStruct,
};

GenericStruct<i32>: export type GenericStruct<T> = {
	arg: T,
};

GenericStruct<String>: export type GenericStruct<T> = {
	arg: T,
};

FlattenEnumStruct: export type FlattenEnumStruct = {
	outer: string,
} & FlattenEnum;

OverridenStruct: export type OverridenStruct = {
	overriden_field: string,
};

HasGenericAlias: export type HasGenericAlias = { [key in number]: string };

EnumMacroAttributes: export type EnumMacroAttributes = ({ A: string }) & { D?: never; bbb?: never; cccc?: never } | ({ bbb: number }) & { A?: never; D?: never; cccc?: never } | ({ cccc: number }) & { A?: never; D?: never; bbb?: never } | ({ D: {
	a: string,
	bbbbbb: number,
} }) & { A?: never; bbb?: never; cccc?: never };

InlineEnumField: export type InlineEnumField = { A: {
	a: string,
} };

InlineOptionalType: export type InlineOptionalType = {
	optional_field: {
	a: string,
} | null,
};

Rename: export type Rename = "OneWord" | "Two words";

TransparentType: export type TransparentType = TransparentTypeInner;

TransparentType2: export type TransparentType2 = null;

TransparentTypeWithOverride: export type TransparentTypeWithOverride = string;

HashMap<BasicEnum, ()>: 
HashMap<BasicEnum, i32>: 
Vec<PlaceholderInnerField>: 
EnumReferenceRecordKey: export type EnumReferenceRecordKey = {
	a: Partial<{ [key in BasicEnum]: number }>,
};

FlattenOnNestedEnum: export type FlattenOnNestedEnum = {
	id: string,
} & NestedEnum;

MyEmptyInput: export type MyEmptyInput = Record<string, never>;

(String): 
ExtraBracketsInTupleVariant: export type ExtraBracketsInTupleVariant = { A: string };

ExtraBracketsInUnnamedStruct: export type ExtraBracketsInUnnamedStruct = string;

Vec<MyEnum>: 
InlineTuple: export type InlineTuple = {
	demo: [string, boolean],
};

InlineTuple2: export type InlineTuple2 = {
	demo: [{
	demo: [string, boolean],
}, boolean],
};

Box<str>: 
Box<String>: 
SkippedFieldWithinVariant: export type SkippedFieldWithinVariant = { type: "A" } | { type: "B"; data: string };

KebabCase: export type KebabCase = {
	"test-ing": string,
};

Issue281<'_>: export type Issue281 = {
	default_unity_arguments: string[],
};

LifetimeGenericStruct<'_, i32>: export type LifetimeGenericStruct<T> = {
	borrowed: T[],
	owned: T[],
};

LifetimeGenericEnum<'_, i32>: export type LifetimeGenericEnum<T> = ({ Borrowed: T }) & { Owned?: never } | ({ Owned: T }) & { Borrowed?: never };

RenameWithWeirdCharsField: export type RenameWithWeirdCharsField = {
	"@odata.context": string,
};

RenameWithWeirdCharsVariant: export type RenameWithWeirdCharsVariant = { "@odata.context": string };

RenamedFieldKeys: export type RenamedFieldKeys = {
	"": string,
	"a\"b": string,
	"a\\b": string,
	"line\nbreak": string,
	"line\u2028break": string,
	"line\u2029break": string,
};

RenamedVariantWithSkippedPayload: export type RenamedVariantWithSkippedPayload = "a-b";

type_type::Type: export type Type = never;

ActualType: export type ActualType = {
	a: GenericType<string>,
};

SpectaTypeOverride: export type SpectaTypeOverride = {
	string_ident: string,
	u32_ident: number,
	path: string,
	tuple: [string, number],
};

ContainerTypeOverrideStruct: export type ContainerTypeOverrideStruct = string;

ContainerTypeOverrideEnum: export type ContainerTypeOverrideEnum = string;

ContainerTypeOverrideGeneric<Box<dyn Any>>: export type ContainerTypeOverrideGeneric = string;

ContainerTypeOverrideToGeneric<i32>: export type ContainerTypeOverrideToGeneric<T> = T;

ContainerTypeOverrideTuple: export type ContainerTypeOverrideTuple = [string, number];

ContainerTypeOverrideTupleGeneric<i32>: export type ContainerTypeOverrideTupleGeneric<T> = [T, string];

InvalidToValidType: export type InvalidToValidType = {
	cause: null,
};

TupleStruct: export type TupleStruct = string;

TupleStructWithRep: export type TupleStructWithRep = string;

GenericTupleStruct<String>: export type GenericTupleStruct<T> = T;

BracedStruct: export type BracedStruct = string;

Struct: export type StructNew = {
	t: "StructNew",
	a: string,
};

Struct2: export type Struct2 = {
	b: string,
};

Enum: export type EnumNew = { t: "A" } | { t: "B" };

Enum2: export type Enum2New = { t: "C" } | { t: "B" } | { t: "D"; enumField: null };

Enum3: export type Enum3New = { t: "A"; b: string };

StructRenameAllUppercase: export type StructRenameAllUppercase = {
	A: number,
	B: number,
};

RenameSerdeSpecialChar: export type RenameSerdeSpecialChar = {
	"a/b": number,
};

EnumRenameAllUppercase: export type EnumRenameAllUppercase = "HELLOWORLD" | "VARIANTB" | "TESTINGWORDS";

Recursive: export type Recursive = {
	demo: Recursive,
};

RecursiveMapValue: export type RecursiveMapValue = {
	demo: { [key in string]: RecursiveMapValue },
};

RecursiveTransparent: export type RecursiveTransparent = RecursiveInline;

RecursiveInEnum: export type RecursiveInEnum = { A: {
	demo: RecursiveInEnum,
} };

NonOptional: export type NonOptional = string | null;

OptionalOnNamedField: export type OptionalOnNamedField = string | null;

OptionalOnTransparentNamedField: export type OptionalOnTransparentNamedField = {
	b: string | null,
};

OptionalInEnum: export type OptionalInEnum = ({ A?: string | null }) & { B?: never; C?: never } | ({ B: {
	a: string | null,
} }) & { A?: never; C?: never } | ({ C: {
	a?: string | null,
} }) & { A?: never; B?: never };

UntaggedVariants: export type UntaggedVariants = string | number | { id: string } | [string, boolean];

UntaggedVariantsWithoutValue: export type UntaggedVariantsWithoutValue = string | [number, string] | number;

UntaggedVariantsWithDuplicateBranches: export type UntaggedVariantsWithDuplicateBranches = null | number;

HashMap<String, ()>: 
Regular: export type Regular = { [key in string]: null };

HashMap<Infallible, ()>: 
HashMap<TransparentStruct, ()>: 
HashMap<UnitVariants, ()>: 
HashMap<UntaggedVariantsKey, ()>: 
ValidMaybeValidKey: export type ValidMaybeValidKey = { [key in MaybeValidKey<string>]: null };

ValidMaybeValidKeyNested: export type ValidMaybeValidKeyNested = { [key in MaybeValidKey<MaybeValidKey<string>>]: null };

MacroStruct: export type MacroStruct = string;

MacroStruct2: export type MacroStruct2 = {
	demo: string,
};

MacroEnum: export type MacroEnum = ({ Demo: string }) & { Demo2?: never } | ({ Demo2: {
	demo2: string,
} }) & { Demo?: never };

DeprecatedType: /**
 * @deprecated
 */
export type DeprecatedType = {
	a: number,
};

DeprecatedTypeWithMsg: /**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg = {
	a: number,
};

DeprecatedTypeWithMsg2: /**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg2 = {
	a: number,
};

DeprecatedFields: export type DeprecatedFields = {
	a: number,
	/**
	 * @deprecated
	 */
	b: string,
	/**
	 * @deprecated This field is cringe!
	 */
	c: string,
	/**
	 * @deprecated This field is cringe!
	 */
	d: string,
};

DeprecatedTupleVariant: export type DeprecatedTupleVariant = [
/**
 * @deprecated
 */
string, 
/**
 * @deprecated Nope
 */
string, 
/**
 * @deprecated Nope
 */
number];

DeprecatedEnumVariants: export type DeprecatedEnumVariants = 
/**
 * @deprecated
 */
"A" | 
/**
 * @deprecated Nope
 */
"B" | 
/**
 * @deprecated Nope
 */
"C";

CommentedStruct: /**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
export type CommentedStruct = {
	/**
	 *  Some triple-slash comment
	 *  Some more triple-slash comment
	 */
	a: number,
};

CommentedEnum: /**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
export type CommentedEnum = 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
({ A: number }) & { B?: never } | 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
({ B: {
	/**
	 *  Some triple-slash comment
	 *  Some more triple-slash comment
	 */
	a: number,
} }) & { A?: never };

SingleLineComment: /**  Some single-line comment */
export type SingleLineComment = 
/**  Some single-line comment */
({ A: number }) & { B?: never } | 
/**  Some single-line comment */
({ B: {
	/**  Some single-line comment */
	a: number,
} }) & { A?: never };

NonGeneric: export type Demo<A, B> = {
	a: A,
	b: B,
};

HalfGenericA<u8>: export type Demo<A, B> = {
	a: A,
	b: B,
};

HalfGenericB<bool>: export type Demo<A, B> = {
	a: A,
	b: B,
};

FullGeneric<u8, bool>: export type Demo<A, B> = {
	a: A,
	b: B,
};

Another<bool>: export type Demo<A, B> = {
	a: A,
	b: B,
};

MapA<u32>: 
MapB<u32>: 
MapC<u32>: 
AGenericStruct<u32>: export type AGenericStruct<T> = {
	field: Demo<T, boolean>,
};

A: export type A = {
	a: B,
	b: {
		b: number,
	},
	c: B,
	d: {
		flattened: number,
	},
	e: {
		generic_flattened: number,
	},
};

DoubleFlattened: export type DoubleFlattened = {
	a: ToBeFlattened,
	b: ToBeFlattened,
};

FlattenedInner: export type FlattenedInner = Inner;

BoxFlattened: export type BoxFlattened = BoxedInner;

BoxInline: export type BoxInline = {
	c: {
		a: number,
	},
};

First: export type First = {
	a: string,
};

Second: export type Second = {
	a: number,
};

Third: export type Third = {
	b: { [key in string]: string },
	c: First,
} & First;

Fourth: export type Fourth = {
	a: First,
	b: {
		a: string,
	},
};

TagOnStructWithInline: export type TagOnStructWithInline = {
	type: "TagOnStructWithInline",
	a: First,
	b: {
		a: string,
	},
};

Sixth: export type Sixth = {
	a: First,
	b: First,
};

Seventh: export type Seventh = {
	a: First,
	b: Second,
};

Eight: export type Eight = { A: string } | "B";

Ninth: export type Ninth = { t: "A"; c: string } | { t: "B" } | { t: "C"; c: {
	a: string,
} } | { t: "D"; c: First };

Tenth: export type Tenth = string | null | {
	a: string,
} | First;

MyEnumTagged: export type MyEnumTagged = {
	type: "Variant",
} & First;

MyEnumExternal: export type MyEnumExternal = { Variant: {
	inner: First,
} };

MyEnumAdjacent: export type MyEnumAdjacent = { t: "Variant"; c: {
	inner: First,
} };

MyEnumUntagged: export type MyEnumUntagged = { inner: First };

EmptyStruct: export type EmptyStruct = Record<string, never>;

EmptyStructWithTag: export type EmptyStructWithTag = {
	a: "EmptyStructWithTag",
};

AdjacentlyTagged: export type AdjacentlyTagged = { t: "A" } | { t: "B"; c: {
	id: string,
	method: string,
} } | { t: "C"; c: string };

LoadProjectEvent: export type LoadProjectEvent = { event: "started"; data: {
	projectName: string,
} } | { event: "progressTest"; data: {
	projectName: string,
	status: string,
	progress: number,
} } | { event: "finished"; data: {
	projectName: string,
} };

ExternallyTagged: export type ExternallyTagged = "A" | ({ B: {
	id: string,
	method: string,
} }) & { C?: never } | ({ C: string }) & { B?: never };

Issue221External: export type Issue221External = ({ A: {
	a: string,
} }) & { B?: never } | ({ B: {
	b: string,
} }) & { A?: never };

InternallyTaggedD: export type InternallyTaggedD = {
	type: "A",
} & { [key in string]: string };

InternallyTaggedE: export type InternallyTaggedE = { type: "A" };

InternallyTaggedF: export type InternallyTaggedF = { type: "A" };

InternallyTaggedH: export type InternallyTaggedH = { type: "A" };

InternallyTaggedL: export type InternallyTaggedL = {
	type: "A",
} & { type: "A" } | { type: "B" };

InternallyTaggedM: export type InternallyTaggedM = { type: "A" };

Issue221UntaggedSafe: export type Issue221UntaggedSafe = ({ a: string }) & { b?: never } | ({ b: string }) & { a?: never };

Issue221UntaggedMixed: export type Issue221UntaggedMixed = ({ a: string }) & { b?: never; values?: never } | ({ b: string }) & { a?: never; values?: never } | ({ values: { [key in string]: string } }) & { a?: never; b?: never };

EmptyEnum: export type EmptyEnum = never;

EmptyEnumTagged: export type EmptyEnumTagged = never;

EmptyEnumTaggedWContent: export type EmptyEnumTaggedWContent = never;

EmptyEnumUntagged: export type EmptyEnumUntagged = never;

SkipOnlyField: export type SkipOnlyField = Record<string, never>;

SkipField: export type SkipField = {
	b: number,
};

SkipVariant: export type SkipVariant = { A: string };

SkipUnnamedFieldInVariant: export type SkipUnnamedFieldInVariant = "A" | { B: [number] };

SkipNamedFieldInVariant: export type SkipNamedFieldInVariant = ({ A: Record<string, never> }) & { B?: never } | ({ B: {
	b: number,
} }) & { A?: never };

TransparentWithSkip: export type TransparentWithSkip = null;

TransparentWithSkip2: export type TransparentWithSkip2 = string;

TransparentWithSkip3: export type TransparentWithSkip3 = string;

SkipVariant2: export type SkipVariant2 = { tag: "A"; data: string };

SkipVariant3: export type SkipVariant3 = { A: {
	a: string,
} };

SkipStructFields: export type SkipStructFields = {
	a: number,
};

SpectaSkipNonTypeField: export type SpectaSkipNonTypeField = {
	a: number,
};

FlattenA: export type FlattenA = {
	a: number,
	b: number,
};

FlattenB: export type FlattenB = {
	c: number,
} & FlattenA;

FlattenC: export type FlattenC = {
	c: number,
} & FlattenA;

FlattenD: export type FlattenD = {
	a: FlattenA,
	c: number,
};

FlattenE: export type FlattenE = {
	b: ({
		c: number,
	}) & (FlattenA),
	d: number,
};

FlattenF: export type FlattenF = {
	b: ({
		c: number,
	}) & (FlattenA),
	d: number,
};

FlattenG: export type FlattenG = {
	b: FlattenB,
	d: number,
};

TupleNested: export type TupleNested = [number[], [number[], number[]], [number[], number[], number[]]];

Generic1<()>: export type Generic1<T> = {
	value: T,
	values: T[],
};

GenericAutoBound<()>: export type GenericAutoBound<T> = {
	value: T,
	values: T[],
};

GenericAutoBound2<()>: export type GenericAutoBound2<T> = {
	value: T,
	values: T[],
};

Container1: export type Container1 = {
	foo: Generic1<number>,
	bar: Generic1<number>[],
	baz: { [key in string]: Generic1<string> },
};

Generic2<(), String, i32>: export type Generic2<A, B, C> = ({ A: A }) & { B?: never; C?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ B: [B, B, B] }) & { A?: never; C?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ C: C[] }) & { A?: never; B?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ D: A[][][] }) & { A?: never; B?: never; C?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ E: {
	a: A,
	b: B,
	c: C,
} }) & { A?: never; B?: never; C?: never; D?: never; X?: never; Y?: never; Z?: never } | ({ X: number[] }) & { A?: never; B?: never; C?: never; D?: never; E?: never; Y?: never; Z?: never } | ({ Y: number }) & { A?: never; B?: never; C?: never; D?: never; E?: never; X?: never; Z?: never } | ({ Z: number[][] }) & { A?: never; B?: never; C?: never; D?: never; E?: never; X?: never; Y?: never };

GenericNewType1<()>: export type GenericNewType1<T> = T[][];

GenericTuple<()>: export type GenericTuple<T> = [T, T[], T[][]];

GenericStruct2<()>: export type GenericStruct2<T> = {
	a: T,
	b: [T, T],
	c: [T, [T, T]],
	d: [T, T, T],
	e: [([T, T]), ([T, T]), ([T, T])],
	f: T[],
	g: T[][],
	h: ([([T, T]), ([T, T]), ([T, T])])[],
};

InlineGenericNewtype<String>: 
InlineGenericNested<String>: 
InlineFlattenGenericsG<()>: export type InlineFlattenGenericsG<T> = {
	t: T,
};

InlineFlattenGenerics: export type InlineFlattenGenerics = {
	g: InlineFlattenGenericsG<string>,
	gi: {
		t: string,
	},
} & InlineFlattenGenericsG<string>;

GenericDefault: export type GenericDefault<T = string> = {
	value: T,
};

ChainedGenericDefault: export type ChainedGenericDefault<T = string, U = T> = {
	first: T,
	second: U,
};

ChainedGenericDefault<String, String>: export type ChainedGenericDefault<T = string, U = T> = {
	first: T,
	second: U,
};

ChainedGenericDefault<i32>: export type ChainedGenericDefault<T = string, U = T> = {
	first: T,
	second: U,
};

ChainedGenericDefault<String, i32>: export type ChainedGenericDefault<T = string, U = T> = {
	first: T,
	second: U,
};

GenericDefaultSkipped: export type GenericDefaultSkipped<T> = {
	value: T,
};

GenericDefaultSkippedNonType: export type GenericDefaultSkippedNonType<T> = {
	value: number,
};

GenericParameterOrderPreserved: export type GenericParameterOrderPreserved = {
	pair: Pair<number, string>,
};

ConstGenericInNonConstContainer: export type ConstGenericInNonConstContainer = {
	data: [number],
	a: [number, number],
	d: [number, number],
};

ConstGenericInConstContainer: export type ConstGenericInConstContainer = {
	data: number[],
	a: number[],
	d: [number, number],
};

NamedConstGenericContainer: export type NamedConstGenericContainer = {
	a: NamedConstGeneric,
	b: NamedConstGeneric,
	d: [number, number],
};

InlineConstGenericContainer: export type InlineConstGenericContainer = {
	b: {
		data: [number, number],
		a: [number, number],
		d: [number, number, number],
	},
	c: {
		data: [number, number, number],
		a: [number, number],
		d: [number, number, number],
	},
	d: [number, number],
};

InlineRecursiveConstGenericContainer: export type InlineRecursiveConstGenericContainer = {
	b: {
		data: [number, number],
		a: [number, number],
		d: [number, number, number],
		e: InlineRecursiveConstGeneric,
	},
	c: {
		data: [number, number, number],
		a: [number, number],
		d: [number, number, number],
		e: InlineRecursiveConstGeneric,
	},
	d: [number, number],
};

TestCollectionRegister: export type TestCollectionRegister = never;

TestCollectionRegister: export type TestCollectionRegister = never;
